# lt

./: .env  .gitignore  .tmuxinator.yml  .todo-dev  Cargo.toml  README.md  install.sh  package.json  test.db  todo  todo.db
src/: App.css  App.tsx  app.rs  args.rs  cli.rs  config.rs  db.rs  editor.rs  filesystem.rs  helpers.rs  helpers.ts  main.rs  main.tsx  tasks.rs  types.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-08-14-003718_init/: down.sql  up.sql
src-tauri/src/: db.rs  main.rs  schema.rs
src-tauri/src/commands/: add_category.rs  add_task.rs  get_categories.rs  get_tasks.rs  mod.rs  remove_category.rs  remove_task.rs  update_task_category.rs  update_task_priority.rs  update_task_status.rs  update_task_title.rs
src-tauri/src/ipc/: add.rs  config.rs  extra.rs  get.rs  mod.rs  remove.rs  update.rs
src-tauri/src/models/: categories.rs  mod.rs  subtasks.rs  tasks.rs
src/apps/: cli.rs  tui.rs
src/apps/cli/: add_subcommand.rs  clear_subcommand.rs  delete_subcommand.rs  done_subcommand.rs  edit_subcommand.rs  list_subcommand.rs  move_subcommand.rs  undone_subcommand.rs
src/components/: App.tsx  Category.tsx  MainContent.tsx  Navbar.tsx  NewCategoryInput.tsx  NewSubTaskPopup.tsx  NewTaskInput.tsx  Popup.tsx  SettingsPopup.tsx  Sidebar.tsx  SidebarItem.tsx  Task.tsx  TaskEditPopup.tsx  main_content.tsx  sidebar.tsx
src/components/icons/: Checkbox.tsx  Plus.tsx  Settings.tsx  ShowMore.tsx  Trash.tsx
src/css/: index.css  index.css.map
src/db/: mod.rs  tasks.rs
src/sass/: _vars.scss  index.scss
(+37 files in other folders)
