[package]
name = "todo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
colored = "2.0.0"
dotenv = "0.15"
inquire = "0.4.0"
nanoid = "0.4.0"
chrono = "0.4.22"
